Implemented new behavior for the allGames response by introducing GamesListResponseDto, which contains two parameters: GamesListHeadDto (with int allGamesQuantity and int pagesQuantity) and List<GameDto> for pagination. Additionally, updated the code to set the starting page to 1.